# KernelForML100

./: README.md  pyproject.toml
src/exercise/: __init__.py
src/exercise/Chap1/: __init__.py  problem1.py  problem11.py  problem12.py  problem12_2.py  problem15.py  problem2_1.py  problem2_2.py  problem8.py
src/exercise/Chap3/: __init__.py  problem38.py  problem42.py  problem43.py
src/exercise/Chap4/: __init__.py  problem48.py  problem51.py  problem54.py  problem64.py
src/exercise/Chap5/: __init__.py  problem70.py  problem74.py  problem75.py
src/exercise/Chap6/: __init__.py  problem84.py  problem89.py  problem93.py  problem94.py  problem95.py  problem97.py  problem99.py
