[project]
name = "exercise"
version = "0.1.0"
description = "『機械学習のためのカーネル100問 with Python』の演習"
authors = [
    { name = "matyaki-matyaki"}
]
dependencies = [
    "mypy>=1.10.0",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/exercise"]

[tool.ruff]
line-length = 120
# チェックするルール
select = ["ALL"]
ignore = [
    "D415", # First line should end with a period, question mark, or exclamation point
    "D400", # First line should end with a period
    "RUF002", # Docstring contains ambiguous `：` (FULLWIDTH COLON). Did you mean `:` (COLON)?
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `(function name)`
    "FA102", # Missing `from __future__ import annotations`, but uses PEP 604 union
    "S101", # Use of `assert` detected
    "T201", # `print` found
    "N816", # Variable `(variable name)` in global scope should not be mixedCase
    "N802", # Function name `(function name)` should be lowercase
    "N806", # Variable `(variable name)` in function should be lowercase
    "RUF003", # Comment contains ambiguous `（` (FULLWIDTH LEFT PARENTHESIS). Did you mean `(` (LEFT PARENTHESIS)?
]

[tool.ruff.pydocstyle]
convention = "google"
