[project]
name = "exercise"
version = "0.1.0"
description = "『機械学習のためのカーネル100問 with Python』の演習"
authors = [
    { name = "matyaki-matyaki"}
]
dependencies = [
    "mypy>=1.10.0",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "cvxopt>=1.3.2",
    "scipy>=1.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/exercise"]

[[tool.mypy.overrides]]
module = [
    "pandas",
    "cvxopt",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
# チェックするルール
select = ["ALL"]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `(function name)`
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
    "FA102", # Missing `from __future__ import annotations`, but uses PEP 604 union
    "N802", # Function name `(function name)` should be lowercase
    "N803", # Argument name `(argument name)` should be lowercase
    "N806", # Variable `(variable name)` in function should be lowercase
    "N816", # Variable `(variable name)` in global scope should not be mixedCase
    "PLR0913", # Too many arguments in function definition (7 > 5)
    "RUF002", # Docstring contains ambiguous `：` (FULLWIDTH COLON). Did you mean `:` (COLON)?
    "RUF003", # Comment contains ambiguous `（` (FULLWIDTH LEFT PARENTHESIS). Did you mean `(` (LEFT PARENTHESIS)?
    "S101", # Use of `assert` detected
    "T201", # `print` found
    "TD003", # Missing issue link on the line following this TODO
    "FIX002", # Line contains TODO, consider resolving the issue
]

[tool.ruff.pydocstyle]
convention = "google"
